--- a/test/shared/CMakeLists.txt
+++ b/test/shared/CMakeLists.txt
@@ -2,5 +2,8 @@
 #add_custom_test(shared_dummy)
 add_custom_test(shared_Stats)
 add_custom_test(shared_State)
+add_custom_test(shared_Position)
+add_custom_test(shared_Cursor)
+add_custom_test(shared_Element)
 # vim: set sw=2 sts=2 et:
 
