--- a/test/shared/CMakeLists.txt
+++ b/test/shared/CMakeLists.txt
@@ -5,5 +5,6 @@ add_custom_test(shared_State)
 add_custom_test(shared_Position)
 add_custom_test(shared_Cursor)
 add_custom_test(shared_Element)
+add_custom_test(shared_FreeCell)
 # vim: set sw=2 sts=2 et:
 
