--- a/test/shared/CMakeLists.txt
+++ b/test/shared/CMakeLists.txt
@@ -6,5 +6,7 @@ add_custom_test(shared_Position)
 add_custom_test(shared_Cursor)
 add_custom_test(shared_Element)
 add_custom_test(shared_FreeCell)
+add_custom_test(shared_ObstacleCell)
+
 # vim: set sw=2 sts=2 et:
 
