--- a/test/shared/CMakeLists.txt
+++ b/test/shared/CMakeLists.txt
@@ -1,4 +1,5 @@
 # List of test functions
+
 #add_custom_test(shared_dummy)
 add_custom_test(shared_Stats)
 add_custom_test(shared_State)
@@ -7,7 +8,13 @@ add_custom_test(shared_Cursor)
 add_custom_test(shared_Element)
 add_custom_test(shared_FreeCell)
 add_custom_test(shared_ObstacleCell)
+
+
+add_custom_test(shared_Engine)
+
+
 add_custom_test(shared_Random_AI)
+
 
 # vim: set sw=2 sts=2 et:
 
