--- a/test/shared/CMakeLists.txt
+++ b/test/shared/CMakeLists.txt
@@ -1,9 +1,20 @@
 # List of test functions
+
+# state functions
 #add_custom_test(shared_dummy)
 add_custom_test(shared_Stats)
 add_custom_test(shared_State)
 add_custom_test(shared_Position)
 add_custom_test(shared_Cursor)
 add_custom_test(shared_Element)
+
+#engine functions 
+add_custom_test(shared_Command)
+add_custom_test(shared_AttackCommand)
+add_custom_test(shared_MoveCommand)
+add_custom_test(shared_SelectCharacterCommand)
+add_custom_test(shared_SwitchTurnCommand)
+
+
 # vim: set sw=2 sts=2 et:
 
